fix show function bugs
